# tsgo-rust-ipc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
crates/tsgo-client/: Cargo.toml
crates/tsgo-client/src/: client.rs  errors.rs
crates/tsgo-decoder/: Cargo.toml
crates/tsgo-decoder/src/: decoder.rs  errors.rs  lib.rs
crates/tsgo-decoder/test_data/dumps/go/: tests__cases__compiler__ClassDeclaration21__ClassDeclaration21.ts.txt  tests__cases__compiler__ClassDeclaration22__ClassDeclaration22.ts.txt  tests__cases__compiler__ClassDeclaration8__ClassDeclaration8.ts.txt  tests__cases__compiler__ClassDeclaration9__ClassDeclaration9.ts.txt  tests__cases__compiler__ParameterList7__ParameterList7.ts.txt  tests__cases__compiler__abstractPropertyInConstructor__abstractPropertyInConstructor.ts.txt  tests__cases__compiler__accessorDeclarationEmitVisibilityErrors__accessorDeclarationEmitVisibilityErrors.ts.txt  tests__cases__compiler__accessorWithInitializer__accessorWithInitializer.ts.txt  tests__cases__compiler__aliasInaccessibleModule2__aliasInaccessibleModule2.ts.txt  tests__cases__compiler__aliasInstantiationExpressionGenericIntersectionNoCrash1__aliasInstantiationExpressionGenericIntersectionNoCrash1.ts.txt  tests__cases__compiler__aliasOnMergedModuleInterface__aliasOnMergedModuleInterface_0.ts.txt  tests__cases__compiler__aliasUsageInAccessorsOfClass__aliasUsage1_moduleA.ts.txt  tests__cases__compiler__aliasUsageInArray__aliasUsageInArray_main.ts.txt  tests__cases__compiler__aliasUsageInArray__aliasUsageInArray_moduleA.ts.txt  tests__cases__compiler__aliasUsageInFunctionExpression__aliasUsageInFunctionExpression_main.ts.txt  tests__cases__compiler__aliasUsageInFunctionExpression__aliasUsageInFunctionExpression_moduleA.ts.txt  tests__cases__compiler__aliasUsageInObjectLiteral__aliasUsageInObjectLiteral_main.ts.txt  tests__cases__compiler__aliasUsageInTypeArgumentOfExtendsClause__aliasUsageInTypeArgumentOfExtendsClause_main.ts.txt  tests__cases__compiler__aliasUsageInTypeArgumentOfExtendsClause__aliasUsageInTypeArgumentOfExtendsClause_moduleA.ts.txt  tests__cases__compiler__aliasUsageInVarAssignment__aliasUsageInVarAssignment_moduleA.ts.txt  tests__cases__compiler__aliasUsedAsNameValue__aliasUsedAsNameValue_0.ts.txt  tests__cases__compiler__aliasesInSystemModule2__aliasesInSystemModule2.ts.txt  tests__cases__compiler__allowImportClausesToMergeWithTypes__index.ts.txt  tests__cases__compiler__allowSyntheticDefaultImports10__b.d.ts.txt  tests__cases__compiler__allowSyntheticDefaultImports3__b.ts.txt  tests__cases__compiler__alwaysStrictAlreadyUseStrict__alwaysStrictAlreadyUseStrict.ts.txt  tests__cases__compiler__alwaysStrictModule3__alwaysStrictModule3.ts.txt  tests__cases__compiler__alwaysStrictNoImplicitUseStrict__alwaysStrictNoImplicitUseStrict.ts.txt  tests__cases__compiler__ambientClassDeclarationWithExtends__ambientClassDeclarationExtends_file2.ts.txt  tests__cases__compiler__ambientClassDeclarationWithExtends__ambientClassDeclarationExtends_singleFile.ts.txt  tests__cases__compiler__ambientClassMergesOverloadsWithInterface__ambientClassMergesOverloadsWithInterface.ts.txt  tests__cases__compiler__ambientConstLiterals__ambientConstLiterals.ts.txt  tests__cases__compiler__ambientEnumElementInitializer2__ambientEnumElementInitializer2.ts.txt  tests__cases__compiler__ambientEnumElementInitializer3__ambientEnumElementInitializer3.ts.txt  tests__cases__compiler__ambientEnumElementInitializer6__ambientEnumElementInitializer6.ts.txt  tests__cases__compiler__ambientErrors1__ambientErrors1.ts.txt  tests__cases__compiler__ambientExternalModuleReopen__ambientExternalModuleReopen.ts.txt  tests__cases__compiler__ambientExternalModuleWithRelativeModuleName__ambientExternalModuleWithRelativeModuleName.ts.txt  tests__cases__compiler__ambientWithStatements__ambientWithStatements.ts.txt  tests__cases__compiler__amdDeclarationEmitNoExtraDeclare__Class.ts.txt  (+2911 more)
crates/tsgo-decoder/tests/: common.rs  decode.rs
crates/tsgo-decoder/tests/fixtures/dumps/go/: tests__cases__compiler__ArrowFunctionExpression1__ArrowFunctionExpression1.ts.txt  tests__cases__compiler__abstractClassUnionInstantiation__abstractClassUnionInstantiation.ts.txt  tests__cases__compiler__accessInstanceMemberFromStaticMethod01__accessInstanceMemberFromStaticMethod01.ts.txt  tests__cases__compiler__accessorBodyInTypeContext__accessorBodyInTypeContext.ts.txt  tests__cases__compiler__accessorWithRestParam__accessorWithRestParam.ts.txt  tests__cases__compiler__accessorWithoutBody1__accessorWithoutBody1.ts.txt  tests__cases__compiler__accessorWithoutBody2__accessorWithoutBody2.ts.txt  tests__cases__compiler__accessorsInAmbientContext__accessorsInAmbientContext.ts.txt  tests__cases__compiler__accessors_spec_section-4.5_inference__accessors_spec_section-4.5_inference.ts.txt  tests__cases__compiler__aliasAssignments__aliasAssignments_moduleA.ts.txt  tests__cases__compiler__aliasDoesNotDuplicateSignatures__demo.d.ts.txt  tests__cases__compiler__aliasInaccessibleModule__aliasInaccessibleModule.ts.txt  tests__cases__compiler__aliasOfGenericFunctionWithRestBehavedSameAsUnaliased__aliasOfGenericFunctionWithRestBehavedSameAsUnaliased.ts.txt  tests__cases__compiler__aliasUsageInAccessorsOfClass__aliasUsage1_main.ts.txt  tests__cases__compiler__aliasUsageInGenericFunction__aliasUsageInGenericFunction_main.ts.txt  tests__cases__compiler__aliasUsageInObjectLiteral__aliasUsageInObjectLiteral_moduleA.ts.txt  tests__cases__compiler__aliasUsageInVarAssignment__aliasUsageInVarAssignment_main.ts.txt  tests__cases__compiler__aliasesInSystemModule1__aliasesInSystemModule1.ts.txt  (+2974 more)
crates/tsgo-rust-ipc/: Cargo.toml
crates/tsgo-rust-ipc/src/: lib.rs
crates/tsgo-transport/: Cargo.toml
crates/tsgo-transport/src/: errors.rs  lib.rs  transport.rs
crates/tsgo-transport/test_data/transports/: echo_array.json  echo_boolean.json  echo_null.json  echo_object.json  invalid_method_error.json
crates/tsgo-vfs/: Cargo.toml
crates/tsgo-vfs/src/: errors.rs  lib.rs  memory_fs.rs  real_fs.rs  vfs.rs
src/: errors.rs  (+4 more)
tests/: Cargo.toml  integration_tests.rs
(+5423 files in other folders)
