[package]
name = "tsgo-rust-ipc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
hex = "0.4.3"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "parking_lot", "process", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
byteorder = "1.5.0"
dashmap = "6.1.0"
dynosaur = "0.2.0"
trait-variant = "0.1.2"

[dev-dependencies]
rstest = "0.25.0"
similar-asserts = "1.6"
tokio = { version = "1.45.1", features = ["full"] }

[profile.dev.package]
similar.opt-level = 3
