[workspace]
members = [
    "crates/tsgo-syntax", 
    "crates/tsgo-decoder",
    "crates/tsgo-vfs",
    "crates/tsgo-transport",
    "crates/tsgo-rust-ipc"
]
resolver = "2"

[workspace.dependencies]
hex = "0.4.3"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "parking_lot", "process", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
byteorder = "1.5.0"
dashmap = "6.1.0"
dynosaur = "0.2.0"
trait-variant = "0.1.2"

rstest = "0.25.0"
similar-asserts = "1.6"

tsgo-syntax = { path = "crates/tsgo-syntax" }
tsgo-decoder = { path = "crates/tsgo-decoder" }
tsgo-vfs = { path = "crates/tsgo-vfs" }
tsgo-transport = { path = "crates/tsgo-transport" }

[profile.dev.package]
similar.opt-level = 3
