[workspace]
members = [
    "crates/tsgo-syntax", 
    "crates/tsgo-decoder",
    "crates/tsgo-vfs",
    "crates/tsgo-transport",
    "crates/tsgo-client",
    "crates/tsgo-rust-ipc",
    "tests",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"
authors = ["Abhi Agarwal <abhiaagarwal01@gmail.com>"]
license = "MIT"
repository = "https://github.com/abhiaagarwal/tsgo-rust-ipc"

[workspace.dependencies]
hex = "0.4.3"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
byteorder = "1.5.0"
dashmap = "6.1.0"
async-trait = "0.1.88"

rstest = "0.25.0"
similar-asserts = "1.6"

tsgo-syntax = { path = "crates/tsgo-syntax" }
tsgo-decoder = { path = "crates/tsgo-decoder" }
tsgo-vfs = { path = "crates/tsgo-vfs" }
tsgo-transport = { path = "crates/tsgo-transport" }

[profile.dev.package]
similar.opt-level = 3
