[package]
name = "tsgo-rust-ipc-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tsgo-rust-ipc = { path = "../crates/tsgo-rust-ipc" }
tsgo-vfs = { workspace = true }
tsgo-transport = { workspace = true }
tsgo-client = { path = "../crates/tsgo-client" }

tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

async-trait = { workspace = true }

[[test]]
name = "integration_tests"
path = "integration_tests.rs" 