[package]
name = "tsgo-client"
description = "High-level client wrapper over tsgo-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
crossbeam-channel = "0.5"

tsgo-transport = { workspace = true }
tsgo-vfs = { workspace = true } 