[package]
name = "tsgo-decoder"
description = "Binary format decoder for tsgo IPC messages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tsgo-syntax = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
similar-asserts = { workspace = true } 
