[package]
name = "tsgo-rust-ipc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust implementation of a tsgo binary format decoder and transport layer"

[dependencies]
tsgo-syntax = { workspace = true }
tsgo-decoder = { workspace = true }
tsgo-vfs = { workspace = true }
tsgo-transport = { workspace = true }

# Re-export commonly used external dependencies
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
similar-asserts = { workspace = true }
tokio = { version = "1.45.1", features = ["full"] } 