[package]
name = "tsgo-rust-ipc"
description = "Rust implementation of a tsgo binary format decoder and transport layer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tsgo-syntax = { workspace = true }
tsgo-decoder = { workspace = true }
tsgo-vfs = { workspace = true }
tsgo-transport = { workspace = true }

# Re-export commonly used external dependencies
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
similar-asserts = { workspace = true }
