[package]
name = "tsgo-transport"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Communication protocol layer for tsgo integration"

[dependencies]
tsgo-vfs = { workspace = true }
rmp = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true } 