[package]
name = "tsgo-transport"
description = "Communication protocol layer for tsgo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmp = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util"] }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true } 
tokio = { workspace = true, features = ["macros", "rt"] }
