[package]
name = "tsgo-vfs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Virtual file system abstraction for tsgo integration"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "parking_lot", "io-util"] }
dashmap = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
